--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>QR code component</title>
-</head>
-<body>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png" />
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-</body>
+		<title>QR code component</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<div class="box">
+			<div class="image"></div>
+			<div class="text">
+				<div class="text-large"></div>
+				<div class="text-small"></div>
+			</div>
+		</div>
+	</body>
 </html>
