--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 
-  <div>
-    <section>
+  <div class="tło">
+    <section class="card">
       <img src="./images/image-qr-code.png">
-      <p>Improve your front-end skills by bulding projects</p>
-      <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p class="title">Improve your front-end skills by bulding projects</p>
+      <p class="content"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
     </section>
   </div>
