--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -12,8 +12,9 @@
 <body>
 
   <div class="tło">
+    
     <section class="card">
-      <img src="./images/image-qr-code.png">
+      <img class="foto" src="./images/image-qr-code.png">
       <p class="title">Improve your front-end skills by bulding projects</p>
       <p class="content"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
