--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&family=Space+Mono&display=swap');
+  </style>
+  <link rel="stylesheet" href="style.css">
   <title>QR code component</title>
 </head>
+
 <body>
+<div>
+  <img class="QRimage" src="images/image-qr-code.png" alt="QRcode">
 
-  Improve your front-end skills by building projects
+  <p class="first-parahraph">Improve your front-end skills by building projects</p>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <p class="second-parahraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
 </body>
 </html>
+
