add style.css and HTML elements setup

--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <style>
+    @import url(https://fonts.google.com/specimen/Outfit);
+  </style>
+  <link rel="stylesheet" href="style.css"/>
   <title>QR code component</title>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+    <div>
+      <img src="images/image-qr-code.png" alt="QR-code">
+      <p class="first">Improve your front-end skills by building projects</p>
+    
+    
+      <p class="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
 </body>
 </html>
