--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -9,12 +9,12 @@
   
   <title>QR code component</title>
 </head>
-<body>
+<body class="body">
 
   <div class="tło">
-    
+
     <section class="card">
-      <img class="foto" src="./images/image-qr-code.png">
+      <img class="photo" src="./images/image-qr-code.png">
       <p class="title">Improve your front-end skills by bulding projects</p>
       <p class="content"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
