--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -6,8 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&family=Space+Mono&display=swap');
-  </style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+    </style>
   <link rel="stylesheet" href="style.css">
   <title>QR code component</title>
 </head>
