Add some margin

--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -11,21 +11,25 @@
 			href="./images/favicon-32x32.png" />
 
 		<title>QR code component</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+			rel="stylesheet" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div class="box">
-			<div class="image"></div>
 			<div class="text">
-				<div class="text-large"> Improve your front-end skills by building projects
-
-          </div>
+        <img src="./images/image-qr-code.png" alt="kod qr">
+      
+				<div class="text-large">
+					Improve your front-end skills by building projects
+				</div>
 				<div class="text-small">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </div>
+					Scan the QR code to visit Frontend Mentor and take your coding skills
+					to the next level
+				</div>
 			</div>
 		</div>
 	</body>
