--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -7,16 +7,19 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
+
   <title>QR code component</title>
 </head>
 <body>
   <div id="card">
-    <div id="blueBox">
-      <img src="images/image-qr-code.png" alt="QR code image">
-
-    </div>
-    <h1>Improve your front-end skills by building projects</h1> 
-    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+    <div id="content">
+      <img src="images/image-qr-code.png" alt="QR code image">      
+      <p id="heading">Improve your front-end skills by building projects</p> 
+      <p id="text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
+    </div>  
   </div>
 </body>
 </html>
