--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -14,15 +14,24 @@
     <title>QR code component</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+    </style>
   </head>
 
   <body>
-    <div>
-      <img src="images/image-qr-code.png" />
-      <p>
-        Improve your front-end skills by building projects Scan the QR code to
-        visit Frontend Mentor and take your coding skills to the next level
-      </p>
+    <div class="element">
+      <div>
+        <div>
+          <img src="images/image-qr-code.png" />
+          <p class="bold">Improve your front-end skills by building projects</p>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
