--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>QR code component</title>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <div id="decorated-box">
+    <div id="grey-box">
+      <div id="white-box">
+        <div id="blue-box">
+          <img src="images/image-qr-code.png" id="qr-code" alt="qr-code">
+        </div>
+        <div id="text">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
+      </div> 
+    </div>
+  </div>
   
 </body>
 </html>
