--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -7,12 +7,24 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>QR code component</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+    </style> 
+
+  <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
+  <div class="container">
+    <div>
+    <img src="./images/image-qr-code.png" alt="qr code" class="QRCODE"/>
+    </div>
 
-  Improve your front-end skills by building projects
+    <p class="first-paragraph">
+    Improve your front-end skills by building projects</p>
+    <p class="second-paragraph">
+    Scan the QR code to visit Frontend Mentor and take your coding skills to next level</p>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  </div>
 </body>
 </html>
