--- a/product-card/index.html
+++ b/product-card/index.html
@@ -5,23 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
-  <title>Product preview card component</title>
+  <title class="tytul">Product preview card component</title>
 
 </head>
 <body>
+    <div class="tło">
+      <section class="srodek">
+        <img src="images/image-product-desktop.jpg"
 
-  Preview
+    Preview
 
-  Gabrielle Essence Eau De Parfum
+    Gabrielle Essence Eau De Parfum
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+    Perfumer-Creator for the House of CHANEL.
 
-  $149.99
-  $169.99
+    $149.99
+    $169.99
 
-  Add to Cart
-  
+    Add to Cart
+
+        </section>
+    </div>
 </body>
 </html>
