--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="project.css">
+  <style>    
+    @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100&family=Roboto:wght@100&display=swap")  
+  </style>
   <title>QR code component</title>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <div>
+      <img class="QR" src="images/image-qr-code.png" alt="QRcode"/>
+        <p class="first-paragraph"><strong>Improve your front-end skills by building projects</strong></p>
+        <p class="second-paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      
+  </div>
   
 </body>
 </html>
