--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -7,12 +7,20 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>QR code component</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="qrcode">
+  
+  <image id="image" src="images/image-qr-code.png"></image>
+  <p class="paragraph">Improve your font-end skills by building projects</p>
 
-  Improve your front-end skills by building projects
+  <p class="paragraph1"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  
+</div>
+  
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  
   
 </body>
 </html>
