--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>QR code component</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+  </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+    <div class="container">
+        <div class="image-container">
+        <img class="QRimg" src="images/image-qr-code.png">
+        </div>
+      <p class="first-paragraph"> Improve your front-end skills by building projects</p>
+      <br>
+      <p class="second-paragraph"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
 </body>
 </html>
