--- a/product-card/index.html
+++ b/product-card/index.html
@@ -12,22 +12,28 @@
 </head>
 <body>
     <div class="tło">
-      <section class="srodek">
-        <img src="images/image-product-desktop.jpg"
 
-    Preview
+        <div class="zdjecie">
+        <img class="photo" src="images/image-product-desktop.jpg">
+        </div>
 
-    Gabrielle Essence Eau De Parfum
+          <section class="srodek">
+      
+      <p class="tekst">
+        Preview
 
-    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.
+      Gabrielle Essence Eau De Parfum
 
-    $149.99
-    $169.99
+      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.
 
-    Add to Cart
+      $149.99
+      $169.99
 
-        </section>
+      Add to Cart
+      </p>
+            </section>
+
     </div>
 </body>
 </html>
