Second task added

--- a/product-card/index.html
+++ b/product-card/index.html
@@ -3,25 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Product preview card component</title>
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+  </style>
+  <style>
+      @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+  </style>
+  <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+<div class="First">
+  <img src="./images/image-product-desktop.jpg"/>
+</div>
+<div class="Second">
+  <p class="Perfume">Perfume</p>
+  <p class="Gabrielle">Gabrielle Essence Eau De Parfum</p>
+  <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+  <p class="price">$149.99</p>
+  <p class="oldPrice">$169.99</p>
+  <button> Add to Cart</button>
+</div>
   
 </body>
 </html>
