--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -7,14 +7,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="project.css">
   <style>    
-    @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100&family=Roboto:wght@100&display=swap")  
+     
   </style>
   <title>QR code component</title>
 </head>
 <body>
   <div>
       <img class="QR" src="images/image-qr-code.png" alt="QRcode"/>
-        <p class="first-paragraph"><strong>Improve your front-end skills by building projects</strong></p>
+        <p class="first-paragraph">Improve your front-end skills by building projects</p>
         <p class="second-paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       
   </div>
