style.css in progress

--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -6,14 +6,16 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <style>
-    @import url(https://fonts.google.com/specimen/Outfit);
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
   </style>
   <link rel="stylesheet" href="style.css"/>
   <title>QR code component</title>
 </head>
 <body>
     <div>
-      <img src="images/image-qr-code.png" alt="QR-code">
+      <div class="image">
+        <img class="QR" src="images/image-qr-code.png" alt="QR-code">
+      </div>
       <p class="first">Improve your front-end skills by building projects</p>
     
     
