--- a/product-card/index.html
+++ b/product-card/index.html
@@ -28,10 +28,8 @@
 					A floral, solar and voluptuous interpretation composed by Olivier
 					Polge, Perfumer-Creator for the House of CHANEL.
 				</div>
-				<div class="price">
-					$149.99
-					<span>$169.99</span>
-				</div>
+				<div class="price">$149.99</div>
+				<div class="higher-price">$169.99</div>
 
 				<div class="button">Add to Cart</div>
 			</div>
