--- a/product-card/index.html
+++ b/product-card/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Product preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+    </style>
 
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-</body>
+    <title>Product preview card component</title>
+  </head>
+  <body>
+    <div class="Background">
+      <img class="window"src="/product-card/images/image-product-desktop.jpg"alt="picture"/>
+      <div class="all">
+        <p class="Perfume">Perfume</p>
+        <p class="title">Gabrielle Essence Eau De Parfum</p>
+        <p class="content">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="price">
+        <p class="new-price">$149.99</p>
+        <p class="old-price">$169.99</p>
+        </div>
+        <p class="card">Add to Cart</p>
+      </div>
+    </div>
+  </body>
 </html>
