--- a/product-card/index.html
+++ b/product-card/index.html
@@ -31,6 +31,14 @@
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
+        <div class="price">
+          <p class="p1">$149.99</p>
+          <p class="p2">169.99</p>
+        </div>
+        <div class="button">
+          <img class="cart" src="images/icon-cart.svg"/>
+          <p>add to cart</p>
+        </div>
       </div>
     </div>
   </body>
