--- a/product-card/index.html
+++ b/product-card/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="button">
           <img class="cart" src="images/icon-cart.svg"/>
-          <p>add to cart</p>
+          <p class="atc">Add to cart</p>
         </div>
       </div>
     </div>
