--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>QR code component</title>
     <style>
-      @import url('https://fonts.google.com/specimen/Outfit');
+      @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
       </style>
     <link rel="stylesheet" href="style.css"/>
 </head>
