--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -12,13 +12,11 @@
   <title>QR code component</title>
 </head>
 <body>
-    <div>
-      <div class="image">
-        <img class="QR" src="images/image-qr-code.png" alt="QR-code">
+    <div class="container">
+      <div>
+        <img class="image" src="images/image-qr-code.png" alt="image">
       </div>
       <p class="first">Improve your front-end skills by building projects</p>
-    
-    
       <p class="second">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
 </body>
