--- a/product-card/index.html
+++ b/product-card/index.html
@@ -17,6 +17,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
 			rel="stylesheet" />
 		<link rel="stylesheet" href="../product-card/style.css" />
+		<script src="https://kit.fontawesome.com/4a058f8724.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<div class="box">
@@ -31,7 +32,9 @@
 				<div class="price">$149.99</div>
 				<div class="higher-price">$169.99</div>
 
-				<div class="button">Add to Cart</div>
+				<div class="button">
+					<span><i class="fa-solid fa-cart-shopping"></i></span>
+					Add to Cart</div>
 			</div>
 		</div>
 	</body>
