index.html, style.css added

--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -3,16 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+ 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap');
+    </style>
+ 
+   
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+ 
+ <link rel="stylesheet" href="style.css">
   
-  <title>QR code component</title>
+ <title>QR code component</title>
 </head>
 <body>
+  <div>
+    <img class= "QRimage" src="images/image-qr-code.png"></img>
+    
+    <p class="first paragrapf">Improve your front-end skills by building projects</p>
+    <p class="second paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+   
+  
+</div>
 
-  Improve your front-end skills by building projects
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
 </body>
 </html>
