--- a/product-card/index.html
+++ b/product-card/index.html
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Product preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-</head>
-<body>
+    <title>Product preview card component</title>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-</body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="boxy">
+      <div class="left-column">
+        <img src="./images/image-product-desktop.jpg" />
+      </div>
+      <div class="text">
+        <p class="perfume">PERFUME</p>
+        <p class="title">Gabrielle Essence Eau De Parfum</p>
+        <p class="description">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div>
+          <p class="lowerPrice">$149.99</p>
+          <p class="firstPrice"><del>$169.99</del></p>
+        </div>
+        <div>
+          <button class="button">
+            <img class="cart" src="./images/icon-cart.svg" />
+            Add to Cart
+          </button>
+        </div>
+      </div>
+    </div>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&family=Outfit:wght@400;700&display=swap");
+    </style>
+  </body>
 </html>
