--- a/product-card/index.html
+++ b/product-card/index.html
@@ -7,21 +7,28 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Product preview card component</title>
-
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
+  <div class="container">
+    <section>
+      <img src="images/image-product-desktop.jpg">
+    </section>
+    <section>
+      <div>
+        <p>PERFUME</p>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        Perfumer-Creator for the House of CHANEL.</p>
+      </div>
+      <div>
+        <p>$149.99</p>
+        <p>$169.99</p>
+      </div>
+      <div>
+        Add to Cart
+      </div>
+    </section>
+  </div>
 </body>
 </html>
