--- a/product-card/index.html
+++ b/product-card/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <div class="container">
-    <section>
+    <section class="left">
       <img src="images/image-product-desktop.jpg">
     </section>
-    <section>
+    <section class="right">
       <div>
         <p>PERFUME</p>
         <h1>Gabrielle Essence Eau De Parfum</h1>
@@ -26,7 +26,7 @@
         <p>$169.99</p>
       </div>
       <div>
-        Add to Cart
+       Add to Cart
       </div>
     </section>
   </div>
