--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -5,14 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
   <title>QR code component</title>
 </head>
-<body>
-
+<body style="background-color:hsl(212, 45%, 89%);width:100%;">
+<div style="background-color:hsl(0, 0%, 100%);text-align:center;width:300px;height:500px;border-radius:20px;margin:0 auto;margin-top:100px;">
+<div style="padding:20px">
+<img style="width:260px ;height:260px;border-radius:20px;" src="../qr-code/images/image-qr-code.png">
+</div>
+<div style="padding:20px; font-family: 'Outfit', sans-serif;">
+  <h1 style="font-size:20px;">
   Improve your front-end skills by building projects
-
+  </h1>
+<p style="font-size:15px;color:hsl(220, 15%, 55%)">
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+</p>
+</div>
+</div>
+
+
 </body>
 </html>
