--- a/product-card/index.html
+++ b/product-card/index.html
@@ -7,6 +7,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Product preview card component</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+  </style>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -16,14 +22,14 @@
     </section>
     <section class="right">
       <div>
-        <p>PERFUME</p>
+        <p class="perfume">PERFUME</p>
         <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+        <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
       </div>
-      <div>
-        <p>$149.99</p>
-        <p>$169.99</p>
+      <div class="price">
+        <p class="current-price">$149.99</p>
+        <p class="previous-price">$169.99</p>
       </div>
       <div>
        Add to Cart
