--- a/product-card/index.html
+++ b/product-card/index.html
@@ -31,8 +31,8 @@
         <p class="current-price">$149.99</p>
         <p class="previous-price">$169.99</p>
       </div>
-      <div>
-       Add to Cart
+      <div class="button">
+        <img class="icon-card" src="images/icon-cart.svg" alt=""> Add to Cart
       </div>
     </section>
   </div>
