--- a/qr-code/index-qrcode.html
+++ b/qr-code/index-qrcode.html
@@ -15,7 +15,7 @@
   <image id="image" src="images/image-qr-code.png"></image>
   <p class="paragraph">Improve your font-end skills by building projects</p>
 
-  <p class="paragraph1"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next  level</p>
+  <p class="paragraph1"> Scan the QR code to visit Frontend Mentor, and take your coding skills to the next  level</p>
   
 </div>
   
