--- a/product-card/index.html
+++ b/product-card/index.html
@@ -31,9 +31,9 @@
         <p class="current-price">$149.99</p>
         <p class="previous-price">$169.99</p>
       </div>
-      <div class="button">
-        <img class="icon-card" src="images/icon-cart.svg" alt=""> Add to Cart
-      </div>
+      <p class="button" >
+        <img class="icon-cart" src="images/icon-cart.svg">Add to Cart
+      </p>
     </section>
   </div>
 </body>
