add media query and mobile design

--- a/product-card/index.html
+++ b/product-card/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="style.css">
-
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
@@ -19,7 +20,9 @@
 </head>
 <body>
   <div class="card">
-    <img src="images/image-product-desktop.jpg" alt="perfume picture">
+    <!-- <img src="images/image-product-desktop.jpg" alt="perfume picture"> -->
+    <div class="picture"></div>
+    <div class="blankSpace"></div>
     <div class="content">
       <p class="logo">PERFUME</p>
       <p class="name">Gabrielle Essence Eau De Parfum</p>
