product-card/text-bottom

--- a/product-card/index.html
+++ b/product-card/index.html
@@ -11,28 +11,35 @@
 
 </head>
 <body>
-    <div class="tło">
+    <div class="produkt">
+
 
         <div class="zdjecie">
         <img class="photo" src="images/image-product-desktop.jpg">
         </div>
 
-          <section class="srodek">
+
+        <section class="srodek">
       
-      <p class="tekst">
-        Preview
+          <p class="tekst">
+            <p> PERFUME </p>
 
-      Gabrielle Essence Eau De Parfum
+          <h2>Gabrielle Essence Eau De Parfum
 
-      A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.
 
-      $149.99
-      $169.99
+          </h2>
 
-      Add to Cart
-      </p>
-            </section>
+          <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
+
+          $149.99
+          $169.99
+
+          <p> <button class="button"> Add to Cart </button></p>
+
+          </p>
+
+        </section>
 
     </div>
 </body>
