product-card/ button

--- a/product-card/index.html
+++ b/product-card/index.html
@@ -11,36 +11,33 @@
 
 </head>
 <body>
-    <div class="produkt">
+    <section class="produkt">
+
+          <div class="zdjecie">
+          <img class="photo" src="images/image-product-desktop.jpg">
+          </div>
 
 
-        <div class="zdjecie">
-        <img class="photo" src="images/image-product-desktop.jpg">
-        </div>
+              <section class="srodek">
+            
+                    <p class="tekst">
+                      <p> PERFUME </p>
 
+                    <h2>Gabrielle Essence Eau De Parfum</h2>
 
-        <section class="srodek">
-      
-          <p class="tekst">
-            <p> PERFUME </p>
+                    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                    Perfumer-Creator for the House of CHANEL.</p>
 
-          <h2>Gabrielle Essence Eau De Parfum
+                    <p>$149.99 $169.99</p>
 
+                    <span>
 
-          </h2>
+                          <button class="button"> Add to Cart </button>
 
-          <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-          Perfumer-Creator for the House of CHANEL.</p>
+                    </span>
 
-          $149.99
-          $169.99
+              </section>
 
-          <p> <button class="button"> Add to Cart </button></p>
-
-          </p>
-
-        </section>
-
-    </div>
+      </section>
 </body>
 </html>
