--- a/product-card/index.html
+++ b/product-card/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Product preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Product preview card component</title>
 
-</head>
-<body>
+  </head>
+  <body>
+    <main class="main">
+      <div class="container">
+        <div class="section-row">
+          <div class="image">
+            <picture>
+              <source
+                media="(max-width:376px)"
+                srcset="./images/image-product-mobile.jpg" />
 
-  Preview
+              <img
+                src="./images/image-product-desktop.jpg"
+                alt="Perfume Product"
+            /></picture>
+          </div>
+          <div class="content">
+            <p class="sub-title">PERFUME</p>
+            <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+            <p class="description">
+              A floral, solar and voluptuous interpretation composed by Olivier
+              Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
+            <div class="content__price">
+              <p class="content__price--discount-price">$149.99</p>
+              <p class="content__price--primary-price">$169.99</p>
+            </div>
+            <div class="button">
+              <a href="#"
+                ><i class="fa-solid fa-cart-shopping"></i> Add to Cart</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-</body>
+  </body>
 </html>
