--- a/qr-code/index.html
+++ b/qr-code/index.html
@@ -20,8 +20,8 @@
   <div>
     <img class= "QRimage" src="images/image-qr-code.png"></img>
     
-    <p class="first paragrapf">Improve your front-end skills by building projects</p>
-    <p class="second paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <p class="first-paragraph">Improve your front-end skills by building projects</p>
+    <p class="second-paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     
   
 </div>
