--- a/product-card/my_project.html
+++ b/product-card/my_project.html
@@ -10,11 +10,7 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png" />
 		<title>Product preview card component</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Montserrat:wght@500;700&display=swap"
-			rel="stylesheet" />
+		<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./my-project.css" />
 		<script
 			src="https://kit.fontawesome.com/4a058f8724.js"
