--- a/product-card/index.html
+++ b/product-card/index.html
@@ -6,24 +6,28 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Product preview card component</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-  </style>
-  <style>
-      @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-  </style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500&display=swap');
+      </style>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<div class="First">
-  <img src="./images/image-product-desktop.jpg"/>
-</div>
-<div class="Second">
-  <p class="Perfume">Perfume</p>
-  <p class="Gabrielle">Gabrielle Essence Eau De Parfum</p>
-  <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-  <p class="price">$149.99</p>
-  <p class="oldPrice">$169.99</p>
-  <button> Add to Cart</button>
-</div>
-  
+<body>
+  <section>
+      <div class="First">
+          <img src="./images/image-product-desktop.jpg"/>
+      </div>
+      <div class="Second">
+          <p class="Perfume">PERFUME</p>
+          <p class="Gabrielle">Gabrielle Essence Eau De Parfum</p>
+          <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+          <div class="prices">
+            <p class="price">$149.99</p>
+            <p class="oldPrice">$169.99</p>
+          </div>
+          <button> <img src="./images/icon-cart.svg"/>    Add to Cart</button>
+      </div>
+  </section>  
 </body>
 </html>
