--- a/product-card/index.html
+++ b/product-card/index.html
@@ -23,7 +23,10 @@
                     <p class="tekst">
                       <p> PERFUME </p>
 
-                    <h2>Gabrielle Essence Eau De Parfum</h2>
+                    <h2> Gabrielle 
+                    Essence Eau De Parfum
+                        
+                      </h2>
 
                     <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                     Perfumer-Creator for the House of CHANEL.</p>
@@ -32,7 +35,7 @@
 
                     <span>
 
-                          <button class="button"> Add to Cart </button>
+                          <button class="button"> <img class="ikonka" src="fotki/iconmonstr-shopping-cart-2-12 (1).png"> Add to Cart</button>
 
                     </span>
 
