--- a/product-card/index.html
+++ b/product-card/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<styled>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="project.css" />
   <title>Product preview card component</title>
 
-</head>
-<body>
+  </head>
 
-  Preview
+  <body>
+    <div class="container-wrapper">
+      <div class="container">
+        <img class="card" src="images/image-product-desktop.jpg" alt="Card" />
+        <div>
+          <div>
+            <p class="pr">PERFUME</p>
 
-  Gabrielle Essence Eau De Parfum
+            <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+            <p class="second-paragraph">A floral, solar and voluptuous interpretation composed by Olivier Polge,
+              Perfumer-Creator for the House of CHANEL.</p>
 
-  $149.99
-  $169.99
+            <p class="third-paragraph">$149.99
+              <s>$169.99</s></p>
+          </div>
+          <button><img src="images/icon-cart.svg" />Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  </body>
 
-  Add to Cart
-  
-</body>
 </html>
