--- a/product-card/index.html
+++ b/product-card/index.html
@@ -5,23 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+    </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="style.css">
+  <title>Card item</title>
   
-  <title>Product preview card component</title>
 
 </head>
 <body>
+  <div id="box">
+  <div id="grey-box">
+  <div id="white-box">
+  <div id="blue-box"><img class="product" src="images/image-product-desktop.jpg"></img>
+  </div>
+  <div id="text">
+    <p class="perfume">Perfume</p>
+    <h1>Gabrielle Essence Eau De Parfum</h1> 
+    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+  </div>
+
+  <div class="prices">
+    <p class="new-price">$149.99</p>
+    <p class="old-price">$169.99</p>
+  </div>
+  <div class="add-to-cart">
+    <button>
+    <img class="cart" src="images/icon-cart.svg">
+    <p class="add-to-cart"></p>
+  
+
+  </button>
+</div>
+</div>
+</div>
+</div>
+  
+  
+  
+    
+   </div>
 
   Preview
 
-  Gabrielle Essence Eau De Parfum
+  
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+  
 
-  $149.99
-  $169.99
+ 
 
-  Add to Cart
+
   
 </body>
 </html>
