--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Four card feature section</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png" />
 
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+		<title>Four card feature section</title>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-</body>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
+	<body>
+		<div class="header">
+			<p class="one">Reliable, efficient delivery</p>
+			<p class="two">Powered by Technology</p>
+			<p class="three">
+				Our Artificial Intelligence powered tools use millions of project data
+				points to ensure that your project is successful
+			</p>
+		</div>
+		<div class="supervisor">
+			<p class="title">Supervisor</p>
+			<p class="text">Monitors activity to identify project roadblocks</p>
+		</div>
+		<div class="team">
+			<p class="title">Team Builder</p>
+			<p class="text">
+				Scans our talent network to create the optimal team for your project
+			</p>
+		</div>
+		<div class="karma">
+			<p class="title">Karma</p>
+			<p class="text">Regularly evaluates our talent to ensure quality</p>
+		</div>
+		<div class="calculator">
+			<p class="title">Calculator</p>
+			<p class="text">
+				Uses data from past projects to provide better delivery estimates
+			</p>
+		</div>
+	</body>
 </html>
