--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -5,29 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="style.css" rel="stylesheet"/>
   <title>Four card feature section</title>
 
 </head>
 <body>
+  <div class="Reliable">Reliable, efficient delivery</div>
   
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class=" Powered">Powered by Technology</div>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <div class ="our">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+<div class="Section2">
+<div class="Supervisor">
+ <h1>Supervisor</h1> 
+ <p>Monitors activity to identify project roadblocks</p> 
+</div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+<div class="Team">
+  <h1>Team Builder</h1>
+  <p>Scans our talent network to create the optimal team for your project</p> 
+</div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+<div class="Karma">
+  <h1>Karma</h1>
+  <p>Regularly evaluates our talent to ensure quality</p> 
+</div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+<div class="claculator">
+ <h1>Calculator</h1> 
+ <p>Uses data from past projects to provide better delivery estimates</p> 
+</div>
+</div>
 
 </body>
 </html>
