--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -7,27 +7,48 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Four card feature section</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="tekst">
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <p>Reliable, efficient delivery</p
+  <p> Powered by Technology</p>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+ <p>Our Artificial Intelligence powered tools use millions of project data points 
+  to ensure that your project is successful</p>
+   
+  </div>
+ 
 
-  Team Builder
+  <div class="box1"> 
+    <p>Supervisor</p>
+  Monitors activity to identify project roadblocks 
+  <img src="/Project 2/four-card-feature/images/icon-supervisor.svg">
+
+  </div>
+
+   <div class="box2">
+  <p>Team Builder</p>
   Scans our talent network to create the optimal team for your project
+  <img src="/Project 2/four-card-feature/images/icon-team-builder.svg">
 
-  Karma
+  </div>
+
+    <div class="box3">
+  <p>Karma</p>
   Regularly evaluates our talent to ensure quality
+  <img src="/Project 2/four-card-feature/images/icon-karma.svg">
+  </div>
 
-  Calculator
+    <div class="box4">
+  <p>Calculator</p>
   Uses data from past projects to provide better delivery estimates
+  <img src="/Project 2/four-card-feature/images/icon-calculator.svg">
+
+  </div>
+
 
 </body>
 </html>
