--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -4,30 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Four card feature section</title>
-
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+  <div class="container">
+    <header>
+      <h1>Reliable, efficient delivery</h1>
+      <h2>Powered by Technology</h2>
+      <p>Our Artificial Intelligence powered tools use millions of project data points 
+      to ensure that your project is successful</p>
+    </header>
+    <section>
+      <div class="box">
+        <h3>Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p> 
+        <img src="images/icon-supervisor.svg" alt="">
+      </div>
+      <div class="box">
+        <h3>Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src="images/icon-team-builder.svg" alt=""> 
+      </div>
+      <div class="box">
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="images/icon-karma.svg" alt="">
+      </div>
+      <div class="box">
+        <h3>Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="images/icon-calculator.svg" alt="">
+        </div>
+    </section>
+  </div>
 </body>
 </html>
