--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -13,12 +13,12 @@
 <body>
   <div class="tekst">
 
-  <p>Reliable, efficient delivery</p
+  <p>Reliable, efficient delivery</p>
   <p> Powered by Technology</p>
 
  <p>Our Artificial Intelligence powered tools use millions of project data points 
   to ensure that your project is successful</p>
-   
+
   </div>
  
 
