--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css"/>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+  </style>
   <title>Four card feature section</title>
 </head>
 <body>
@@ -16,22 +19,24 @@
       to ensure that your project is successful</p>
     </header>
     <section>
-      <div class="box">
+      <div class="box box-left">
         <h3>Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p> 
         <img src="images/icon-supervisor.svg" alt="">
       </div>
-      <div class="box">
-        <h3>Team Builder</h3>
-        <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="images/icon-team-builder.svg" alt=""> 
+      <div class="box-center">
+        <div class="box box-center-top" >
+          <h3>Team Builder</h3>
+          <p>Scans our talent network to create the optimal team for your project</p>
+          <img src="images/icon-team-builder.svg" alt=""> 
+        </div>
+        <div class="box box-center-bottom">
+          <h3>Karma</h3>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="">
+        </div>
       </div>
-      <div class="box">
-        <h3>Karma</h3>
-        <p>Regularly evaluates our talent to ensure quality</p>
-        <img src="images/icon-karma.svg" alt="">
-      </div>
-      <div class="box">
+      <div class="box box-right">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src="images/icon-calculator.svg" alt="">
