Desktop page finished

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <title>Four card feature section</title>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <link rel="stylesheet" href="style.css" />
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+    </style>
+  </head>
+  <body>
+    <div class="header">
+      <span class="top">Reliable, efficient delivery</span>
+      <span class="bottom">Powered by Technology</span>
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </div>
+    <div class="container">
+      <div class="one">
+        <div class="cyan"></div>
+        <div class="text">
+          <span class="title">Supervisor</span>
+          <span class="description"
+            >Monitors activity to identify project roadblocks</span
+          >
+        </div>
+        <div class="imgcont"><img src="images/icon-supervisor.svg" /></div>
+      </div>
+      <div>
+        <div class="two">
+          <div class="red"></div>
+          <div class="text">
+            <span class="title">Team Builder</span>
+            <span class="description"
+              >Scans our talent network to create the optimal team for your
+              project</span
+            >
+          </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+          <div class="imgcont"><img src="images/icon-team-builder.svg" /></div>
+        </div>
+        <div class="three">
+          <div class="orange"></div>
+          <div class="text">
+            <span class="title">Karma</span>
+            <span class="description"
+              >Regularly evaluates our talent to ensure quality</span
+            >
+          </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-</body>
+          <div class="imgcont"><img src="images/icon-karma.svg" /></div>
+        </div>
+      </div>
+      <div class="four">
+        <div class="blue"></div>
+        <div class="text">
+          <span class="title">Calculator</span>
+          <span class="description"
+            >ses data from past projects to provide better delivery
+            estimates</span
+          >
+        </div>
+        <div class="imgcont"><img src="images/icon-calculator.svg" /></div>
+      </div>
+    </div>
+  </body>
 </html>
