Project 2 HTML added

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -1,42 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="style.css" rel="stylesheet"/>
-  <title>Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Four card feature section</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500&family=Poppins:wght@200&display=swap");
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="SectionA">
+        <div class="Reliable">Reliable, efficient delivery</div>
 
-</head>
-<body>
-  <div class="Reliable">Reliable, efficient delivery</div>
-  
-  <div class=" Powered">Powered by Technology</div>
+        <div class="Powered">Powered by Technology</div>
 
-  <div class ="our">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</div>
+        <div class="our">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </div>
+      </div>
+      <div class="secB">
+        <div class="SectionB">
+          <div class="supB">
+            <div class="supervisor">
+              <h1>Supervisor</h1>
+              <p>Monitors activity to identify project roadblocks</p>
+              <div class="img">
+                <img src="./images/icon-supervisor.svg" />
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="team">
+              <h1>Team Builder</h1>
+              <p>
+                Scans our talent network to create the optimal team for your
+                project
+              </p>
+              <div class="img">
+                <img src="./images/icon-team-builder.svg" />
+              </div>
+            </div>
 
-<div class="Section2">
-<div class="Supervisor">
- <h1>Supervisor</h1> 
- <p>Monitors activity to identify project roadblocks</p> 
-</div>
+            <div class="karma">
+              <h1>Karma</h1>
+              <p>Regularly evaluates our talent to ensure quality</p>
+              <div class="img">
+                <img src="./images/icon-karma.svg" />
+              </div>
+            </div>
+          </div>
 
-<div class="Team">
-  <h1>Team Builder</h1>
-  <p>Scans our talent network to create the optimal team for your project</p> 
-</div>
-
-<div class="Karma">
-  <h1>Karma</h1>
-  <p>Regularly evaluates our talent to ensure quality</p> 
-</div>
-
-<div class="claculator">
- <h1>Calculator</h1> 
- <p>Uses data from past projects to provide better delivery estimates</p> 
-</div>
-</div>
-
-</body>
+          <div class="cal1">
+            <div class="calculator">
+              <h1>Calculator</h1>
+              <p>
+                Uses data from past projects to provide better delivery
+                estimates
+              </p>
+              <div class="img">
+                <img src="./images/icon-calculator.svg" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
