--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -22,32 +22,49 @@
   </div>
  
 
-  <div class="box1"> 
-    <p>Supervisor</p>
-  Monitors activity to identify project roadblocks 
-  <img src="/Project 2/four-card-feature/images/icon-supervisor.svg">
+<div class="box1"> 
 
-  </div>
+    <div class="t1">
+        <p class="titlebox">Supervisor</p>
+        <p class="textbox">Monitors activity to identify project roadblocks </p>
+    </div>
+    <div class="icon1">
+        <img class=z1 src="/Project 2/four-card-feature/images/icon-supervisor.svg">
+    </div>
+</div>
 
-   <div class="box2">
-  <p>Team Builder</p>
-  Scans our talent network to create the optimal team for your project
-  <img src="/Project 2/four-card-feature/images/icon-team-builder.svg">
 
-  </div>
+<div class="box2">
 
-    <div class="box3">
-  <p>Karma</p>
-  Regularly evaluates our talent to ensure quality
-  <img src="/Project 2/four-card-feature/images/icon-karma.svg">
-  </div>
+      <div class="t2">
+        <p>Team Builder</p>
+          Scans our talent network to create the optimal team for your project
+       </div>
+       <div class="icon2">
+         <img class=z2 src="/Project 2/four-card-feature/images/icon-team-builder.svg">
+      </div>
+</div>
+
+
+<div class="box3">
+      <div class="t3">
+        <p>Karma</p>
+        Regularly evaluates our talent to ensure quality
+    </div>
+      <div class="icon3">
+         <img class=z3 src="/Project 2/four-card-feature/images/icon-karma.svg">
+      </div>
+</div>
 
     <div class="box4">
-  <p>Calculator</p>
-  Uses data from past projects to provide better delivery estimates
-  <img src="/Project 2/four-card-feature/images/icon-calculator.svg">
-
-  </div>
+      <div class="t4">
+        <p>Calculator</p>
+        Uses data from past projects to provide better delivery estimates
+   </div>
+      <div class="icon4">
+        <img class=z4 src="/Project 2/four-card-feature/images/icon-calculator.svg">
+      </div>
+</div>
 
 
 </body>
