move img to right side

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -22,25 +22,33 @@
       <div class="box box-left">
         <h3>Supervisor</h3>
         <p>Monitors activity to identify project roadblocks</p> 
-        <img src="images/icon-supervisor.svg" alt="">
+        <div class="img">
+          <img src="images/icon-supervisor.svg" alt="">
+        </div>
       </div>
       <div class="box-center">
         <div class="box box-center-top" >
           <h3>Team Builder</h3>
           <p>Scans our talent network to create the optimal team for your project</p>
-          <img src="images/icon-team-builder.svg" alt=""> 
+          <div class="img">
+            <img src="images/icon-team-builder.svg" alt=""> 
+          </div>
         </div>
         <div class="box box-center-bottom">
           <h3>Karma</h3>
           <p>Regularly evaluates our talent to ensure quality</p>
-          <img src="images/icon-karma.svg" alt="">
+          <div class="img">
+            <img src="images/icon-karma.svg" alt="">
+          </div>
         </div>
       </div>
       <div class="box box-right">
         <h3>Calculator</h3>
         <p>Uses data from past projects to provide better delivery estimates</p>
-        <img src="images/icon-calculator.svg" alt="">
+        <div class="img">
+          <img src="images/icon-calculator.svg" alt="">
         </div>
+      </div>
     </section>
   </div>
 </body>
