--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -5,29 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Four card feature section</title>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+    </style>
 
 </head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="container-1">
+    <div class="text-1">
+      <p class="item-1 item"> Reliable, efficient delivery</p>
+      <p class="item-2 item">Powered by Technology </p>
+      <p class="item-3 item"> Our Artificial Intelligence powered tools use millions of project data points 
+      to ensure that your project is successful </p>
+    </div>
+  </div>
+    <div class="container-2">
+      <div class="box-1 box">
+        <p class="subtitle">Supervisor</p>
+        <p class="item-4">Monitors activity to identify project roadblocks</p>
+      </div>  
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <div class="box-2 box">
+        <p class="subtitle">Calculator</p>
+        <p class="item-4">Uses data from past projects to provide better delivery estimates</p>
+      </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <div class="box-3 box">
+        <p class="subtitle">Team Builder</p>
+        <p class="item-4">Scans our talent network to create the optimal team for your project</p>
+      </div>  
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
+      <div class="box-4 box">
+        <p class="subtitle">Karma</p>
+        <p class="item-4">Regularly evaluates our talent to ensure quality</p>
+      </div>
+    </div>
 </body>
 </html>
