2nd commit - still not finished

--- a/Project 2/four-card-feature/index.html
+++ b/Project 2/four-card-feature/index.html
@@ -21,20 +21,27 @@
        <p>Our Artificial Intelligence powered tools use millions of project <br>
        data points to ensure that your project is successful</p>
     </div>
-    <div class="Boxcontainer">
-      <div class="box">
+    <div class="Boxcontainer row">
+      <div class="box borderGreen">
           <h3>Supervisor</h3>
               <p> Monitors activity to identify project roadblocks</p>
-      <div class="box">
+              <img class="picture" src="./images/icon-supervisor.svg">
+      </div>
+      <div class="box borderRed column">
           <h3>Team Builder</h3>
               <p>Scans our talent network to create the optimal team for your project</p>
-      <div class="box">
+              <img class="picture" src="./images/icon-team-builder.svg">
+      </div>
+      <div class="box borderOrange column">
           <h3>Karma</h3>
               <p> Regularly evaluates our talent to ensure quality</p>
-      <div class="box">
+              <img class="picture"  src="./images/icon-karma.svg">
+      </div>
+      <div class="box borderBlue column">
           <h3>Calculator</h3>
               <p>Uses data from past projects to provide better delivery estimates</p>
-    </div>
+              <img class="picture"  src="./images/icon-calculator.svg">
+      </div>
   </div>
 </body>
 </html>
